--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
   "presets": ["env","react"],
-  "plugins": ["transform-runtime"]
+  "plugins": ["transform-runtime", ["import", {
+    "libraryName": "antd",
+    "style": "css"
+  }]]
+
 }
