--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "main": "config/webpack/webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run": "webpack-dev-server --config config/webpack/webpack.config.js",
-    "stop": "ctrl^C --yes"
+    "run": "webpack-dev-server --config config/webpack/webpack.config.js"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +25,7 @@
     "less-loader": "^5.0.0",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
+    "scss-loader": "0.0.1",
     "style-loader": "^0.23.1",
     "url-loader": "^2.1.0",
     "webpack": "^4.38.0",
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "antd": "^3.20.7",
+    "babel-plugin-import": "^1.12.0",
     "layui-src": "^2.5.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
