--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "config/webpack/webpack.config.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "run": "webpack-dev-server --config config/webpack/webpack.config.js"
+    "run": "webpack-dev-server --history-api-fallback --config config/webpack/webpack.config.js"
   },
   "keywords": [],
   "author": "",
@@ -20,9 +20,11 @@
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^3.1.0",
     "file-loader": "^4.1.0",
+    "history": "^4.9.0",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "mysql": "^2.17.1",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "scss-loader": "0.0.1",
@@ -37,6 +39,8 @@
     "babel-plugin-import": "^1.12.0",
     "layui-src": "^2.5.4",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1"
   }
 }
